...
                    loginDirecto(usuario)
                } else {
                    delay(1000)
                    _authState.update {
                        it.copy(
                            isLoading = false,
                            mensaje = "Correo o contraseña incorrectos."
                        )
                    }
                }
            } catch (e: Exception) {
                _authState.update {
                    it.copy(
...
